# coDB

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml
client/: Cargo.toml  README.md
client/src/: console_handler.rs  db_client.rs  main.rs
engine/: Cargo.toml  README.md
engine/docs/: files_structure.md  serialization.md
engine/src/: b_tree.rs  b_tree_key.rs  b_tree_node.rs  background_worker.rs  cache.rs  catalog.rs  consts.rs  data_types.rs  disc_manager.rs  disk.rs  disk_manager.rs  file_manager.rs  files_manager.rs  heap_file.rs  lexicographic_serialization.rs  lib.rs  paged_file.rs  poc_cache.rs  record.rs  slotted_page.rs
engine/src/heap_file/: error.rs  fsm.rs  lock_chains.rs  mod.rs  pages.rs  record.rs
executor/: Cargo.toml
executor/src/: consts.rs  error_factory.rs  expression_executor.rs  iterators.rs  lib.rs  response.rs  statement_executor.rs
metadata/: Cargo.toml
metadata/src/: catalog.rs  catalog_manager.rs  consts.rs  lib.rs  metadata_file_helper.rs  types.rs
planner/: Cargo.toml
planner/docs/: grammar.md
planner/src/: analyzer.rs  ast.rs  lexer.rs  lib.rs  operators.rs  parser.rs  query_plan.rs  query_planner.rs  resolved_tree.rs  tokens.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  text_protocol.rs
query/: Cargo.toml  grammar.md
query/docs/: grammar.md
query/src/: analyzer.rs  ast.rs  lexer.rs  lib.rs  operators.rs  parser.rs  resolved_tree.rs  tokens.rs  types.rs
query/src/lexer/: lexer.rs  mod.rs  tokens.rs
server/: Cargo.toml  README.md
server/src/: client_handler.rs  main.rs  protocol_handler.rs  protocol_mappings.rs  server.rs  tasks_container.rs  text_client_handler.rs  text_protocol.rs  text_protocol_mappings.rs  workers_container.rs
server/src/tests/: mod.rs  server_tests.rs  text_client_handler_tests.rs
storage/: Cargo.toml
storage/src/: background_worker.rs  cache.rs  files_manager.rs  lib.rs  page_diff.rs  paged_file.rs  write_ahead_log.rs
tester/: Cargo.toml  README.md
tester/src/: client.rs  main.rs  suite.rs
tester/src/e2e/: create_table.rs  mod.rs
tester/src/performance/: concurrent_inserts.rs  concurrent_reads.rs  concurrent_reads_and_inserts.rs  concurrent_reads_non_index.rs  concurrent_reads_with_index.rs  mod.rs
types/: Cargo.toml
types/src/: data.rs  lexicographic_serialization.rs  lib.rs  schema.rs  serialization.rs
