[workspace]
resolver = "3"
members = [
    "client",
    "engine",
    "executor",
    "metadata",
    "planner",
    "protocol",
    "server",
    "storage",
    "tester",
    "types",
]

[workspace.package]
rust-version = "1.90.0"

[workspace.dependencies]
tokio = { version = "1.46.0", features = ["full"] }
thiserror = "2"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12.4"
time = "0.3.41"
bytemuck = { version = "1.23.2", features = ["derive"] }
dashmap = "6.1.0"
itertools = "0.14.0"
rkyv = "0.8.12"
