[package]
name = "client"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
protocol = { path = "../protocol" }

tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.5.51", features = ["derive"] }
log = "0.4.28"
env_logger.workspace = true
