[package]
name = "engine"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
metadata = { path = "../metadata" }

tokio.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
time.workspace = true

byteorder = "1.5.0"
directories = "6.0.0"
dashmap = "6.1.0"
lru = "0.16.0"
bytemuck = { version = "1.23.2", features = ["derive"] }
crossbeam = "0.8"
bitflags = { version = "2.9.4", features = ["bytemuck"] }

[dev-dependencies]
tempfile = "3.20.0"
