[package]
name = "engine"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
metadata = { path = "../metadata" }
storage = { path = "../storage" }

tokio.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
time.workspace = true
bytemuck.workspace = true
dashmap.workspace = true

byteorder = "1.5.0"
crossbeam = "0.8"
bitflags = { version = "2.9.4", features = ["bytemuck"] }
rand = "0.10.0-rc.5"

[dev-dependencies]
tempfile = "3.20.0"
