[package]
name = "engine"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
metadata = { path = "../metadata" }
storage = { path = "../storage" }

thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
time.workspace = true
bytemuck.workspace = true
dashmap.workspace = true

crossbeam = "0.8"
bitflags = { version = "2.9.4", features = ["bytemuck"] }

[dev-dependencies]
tempfile = "3.20.0"
rand = "0.9.2"