[package]
name = "executor"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
engine = { path = "../engine" }
storage = { path = "../storage" }
metadata = { path = "../metadata" }
planner = { path = "../planner" }
types = { path = "../types" }

dashmap.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
itertools.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
