[package]
name = "metadata"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
types = { path = "../types" }
storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

directories = "6.0.0"

[dev-dependencies]
tempfile = "3.20.0"
filetime = "0.2"
