[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
executor = { path = "../executor" }
metadata = { path = "../metadata" }
engine = { path = "../engine" }
protocol = { path = "../protocol" }
types = { path = "../types" }
storage = { path = "../storage" }

tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
itertools.workspace = true
log.workspace = true
env_logger.workspace = true
rkyv.workspace = true
crossbeam.workspace = true
