[package]
name = "storage"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
types = { path = "../types" }
bytemuck.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

lru = "0.16.0"

[dev-dependencies]
tempfile = "3.20.0"
