[package]
name = "tester"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
protocol = { path = "../protocol" }

rkyv.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
clap = { version = "4.5.51", features = ["derive"] }
